--- a/src/presentation/App.css
+++ b/src/presentation/App.css
@@ -2,13 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
+.AppHeader {
   background-color: #282c34;
-  min-height: 100vh;
+  max-height: 7vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,6 +13,6 @@
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.appMain {
+  background: black;
 }
